# ros_lab4

./: README.md
docker/: Dockerfile  docker_build.bash  docker_run.bash
workspace/src/my_robot_simulation_control/: CMakeLists.txt  package.xml
workspace/src/my_robot_simulation_control/config/: camera+lidar.rviz  diff_control.yaml
workspace/src/my_robot_simulation_control/launch/: lab4.launch
workspace/src/my_robot_simulation_control/scripts/: control_kernel.py  cv.py  depend.bash
workspace/src/my_robot_simulation_control/urdf/: diff_robot_model.urdf.xacro  robot_diff.gazebo
workspace/src/my_robot_simulation_control/worlds/: empty.world  lamp.sdf
workspace/src/my_robot_simulation_control/worlds/stll/: lamp.STL  sofa.STL
