<?xml version="1.0"?>
<package format="2">
  <name>my_robot_simulation_control</name>
  <version>0.0.0</version>
  <description>The my_robot_simulation_control package</description>

  <maintainer email="superuser@todo.todo">superuser</maintainer>
  <license>MIT</license>

  <!-- Основные зависимости -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>effort_controllers</build_depend>  <!-- Добавлено -->
  <build_depend>position_controllers</build_depend>  <!-- Добавлено -->
  <build_depend>velocity_controllers</build_depend>  <!-- Добавлено -->
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>  <!-- Добавлено -->
  <build_export_depend>position_controllers</build_export_depend>  <!-- Добавлено -->
  <build_export_depend>velocity_controllers</build_export_depend>  <!-- Добавлено -->
  <build_export_depend>ros_control</build_export_depend>
  <build_export_depend>ros_controllers</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>  <!-- Добавлено -->
  <exec_depend>position_controllers</exec_depend>  <!-- Добавлено -->
  <exec_depend>velocity_controllers</exec_depend>  <!-- Добавлено -->
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <export>
  </export>
</package>

